--- a/assets/css/main_dashboard.css
+++ b/assets/css/main_dashboard.css
@@ -83,4 +83,11 @@ main {padding: 30px 20px;}
 .footer ul{ padding: 0; list-style-type: none; margin: 0;}
 .footer ul li{margin-left: 20px;font-weight: bold;}
 
-#print_OR{display: none;}
+/* #print_OR{display: none;} */
+
+.paid_type_cont{ text-align:left;  padding: 15px 32px; }
+.paid_type_cont input[type="text"]{ display: block; font-size: 15px; width: 100%; border: 1px solid #008080; height: 28px; padding-left: 10px;max-width: 291px;}
+
+.check_field{display: none;margin: 5px 0 0;}
+
+
