--- a/assets/css/main_dashboard.css
+++ b/assets/css/main_dashboard.css
@@ -1,3 +1,5 @@
+html{font-size: 14px;}
+
 body{font-family: 'Roboto', sans-serif;font-size: 18px; line-height: 28px;  color:#333;position: relative;background: none;}
 
 #head_nav {display: inline-block;vertical-align: top;width: 250px;background: #66cc00;position: absolute;top: 0;left: 0;height: 100%;}
@@ -83,11 +85,21 @@ main {padding: 30px 20px;}
 .footer ul{ padding: 0; list-style-type: none; margin: 0;}
 .footer ul li{margin-left: 20px;font-weight: bold;}
 
-/* #print_OR{display: none;} */
+#print_OR{display: none;}
 
 .paid_type_cont{ text-align:left;  padding: 15px 32px; }
 .paid_type_cont input[type="text"]{ display: block; font-size: 15px; width: 100%; border: 1px solid #008080; height: 28px; padding-left: 10px;max-width: 291px;}
 
 .check_field{display: none;margin: 5px 0 0;}
 
+.header_form{display: flex;justify-content: space-between;}
+.search_bar_cont{}
+.search_bar_cont input{display: block; width: 241px; border: 1px solid gray; font-family: inherit; padding: 5px; font-size: 15px;}
+.search_bar_cont{align-items: flex-start;}
 
+.opt_2{align-items: flex-end;}
+
+.flex_cont{display: flex;align-content: center;}
+.flex-left{align-items: flex-start;}
+.flex-right{align-items: flex-end;}
+.flex-right button{font-family: inherit; border: 1px solid #6c0; font-size: 15px; padding: 5px 8px; margin-left: 0.5rem;}
