--- a/src/scss/common/_header.scss
+++ b/src/scss/common/_header.scss
@@ -1,1 +1,25 @@
-header{display: block;}
+.page_header{
+    font-size: 2.2rem;
+    margin: 0 0 2rem;
+}
+
+.nav_userinfo{
+    background: #004001;
+    padding: 1rem;
+    font-weight: bold;
+    font-size: 1.1rem;
+    color: #fff;
+    margin: 2rem 0 0 ;
+    label{
+        margin: 0;
+        display: block;
+    }
+
+    .usrval{
+        font-style: italic;
+        font-size: 0.9rem;
+        color: #d0c5c5;
+        margin-bottom: 1rem;
+    }
+
+}
