added gulp and modified shit

--- a/src/scss/common/_datatable.scss
+++ b/src/scss/common/_datatable.scss
@@ -27,3 +27,11 @@ table[data-tbl='datatable']{
     }
 }
 
+.dataTables_length{
+    select{
+        width: 120px;
+    }
+}
+#trans_table_filter{
+    label{text-align: left!important;}
+}
