--- a/src/scss/common/_header.scss
+++ b/src/scss/common/_header.scss
@@ -17,9 +17,13 @@
 
     .usrval{
         font-style: italic;
-        font-size: 0.9rem;
+        font-size: 1.2rem;
         color: #d0c5c5;
         margin-bottom: 1rem;
     }
 
+}
+
+.f20{
+    font-size: 18px;
 }
