--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -226,9 +226,12 @@ body {
     display: block; }
   .nav_userinfo .usrval {
     font-style: italic;
-    font-size: 0.9rem;
+    font-size: 1.2rem;
     color: #d0c5c5;
     margin-bottom: 1rem; }
+
+.f20 {
+  font-size: 18px; }
 
 .profile_container {
   padding: 2rem; }
@@ -256,6 +259,30 @@ table[data-tbl='datatable'] tbody tr.row-pending {
 
 #trans_table tbody tr td:nth-child(6) {
   font-weight: bold; }
+
+.dataTables_length select {
+  width: 120px; }
+
+#trans_table_filter label {
+  text-align: left !important; }
+
+.modal-header {
+  background: #52ca40;
+  color: #fff;
+  width: 100%; }
+
+.modal .form-control {
+  height: auto;
+  padding: 2px 10px;
+  font-weight: bold; }
+
+.modal .form-group {
+  margin-bottom: 0.3rem; }
+
+.btn-favorate {
+  color: #fff !important;
+  background-color: #52ca40 !important;
+  border-color: #52ca40 !important; }
 
 #main {
   padding: 25px; }
