added approve header in view

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -279,6 +279,20 @@ table[data-tbl='datatable'] tbody tr.row-pending {
 .modal .form-group {
   margin-bottom: 0.3rem; }
 
+.modal .heading_modal {
+  font-size: 1.4rem;
+  font-weight: bold;
+  margin: 0 0 2rem; }
+
+.modal .policy_status {
+  font-style: italic; }
+
+.modal .policy_status.approved {
+  color: #52ca40; }
+
+.modal .policy_status.pending {
+  color: #d52e2e; }
+
 .btn-favorate {
   color: #fff !important;
   background-color: #52ca40 !important;
