--- a/src/scss/common/_modal.scss
+++ b/src/scss/common/_modal.scss
@@ -13,6 +13,24 @@
     .form-group{
         margin-bottom: 0.3rem;
     }
+
+    .heading_modal{
+        font-size: 1.4rem;
+        font-weight: bold;
+        margin: 0 0 2rem
+    }
+
+    .policy_status{
+        font-style: italic;
+        
+    }
+    .policy_status.approved{
+        color: #52ca40;
+    }
+    .policy_status.pending{
+        color: #d52e2e;
+    }
+
 }
 
 .btn-favorate {
