--- a/src/scss/common/_initials.scss
+++ b/src/scss/common/_initials.scss
@@ -15,7 +15,7 @@ blockquote:before, blockquote:after,
 q:before, q:after {content: '';content: none;}
 table {border-collapse: collapse;border-spacing: 0;}
 button, html input[type=button], input[type=reset], input[type=submit] { -webkit-appearance: button; cursor: pointer; }
-input:not([type='radio']):not([type='checkbox']), textarea, select{-webkit-appearance: none;}
+input:not([type='radio']):not([type='checkbox']), textarea{-webkit-appearance: none;}
 form, label {-webkit-text-size-adjust: 100%;}
 mark {background-color: transparent;}
 /* end reset */
@@ -70,4 +70,3 @@ nav ul li.active a {background: #004001;}
 .show_hover ul li a {display: block;padding: 15px 10px;color: #fff;font-size: 16px;}
 
 body{font-family: 'Roboto', sans-serif;font-size: 18px; line-height: 28px;  color:#333;position: absolute;width: 100%;height: 100%;background: none;}
-
