--- a/src/scss/employee/_employee.scss
+++ b/src/scss/employee/_employee.scss
@@ -55,7 +55,7 @@ main {padding: 30px 20px;}
 .form_outer_cont .form_sec .main_frm_field label {display: block;font-size: 14px;}
 .form_outer_cont .form_sec .main_frm_field input, .form_outer_cont .form_sec .main_frm_fieldss input, .form_outer_cont .form_sec .main_frm_fields input { display: block; font-size: 15px; width: 100%; border: 1px solid #008080; height: 28px; padding-left: 10px; }
 .print_sec {text-align: right;padding: 0 30px 22px;}
-.print_sec input {display: inline-block; background: #008080; font-size: 18px; height: 41px; border: none; padding: 0 46px; color: #fff;}
+.print_sec button {display: inline-block; background: #008080; font-size: 18px; height: 41px; border: none; padding: 0 46px; color: #fff;}
 .or_formfield {border: 1px solid #bf0000; margin-top: 30px;}
 .or_formfield .main_form_heading {font-size: 20px;color: #fff;line-height: 45px;background: #bf0000;display: block;padding-left: 15px;}
 
