--- a/src/scss/common/_initials.scss
+++ b/src/scss/common/_initials.scss
@@ -70,3 +70,7 @@ nav ul li.active a {background: #004001;}
 .show_hover ul li a {display: block;padding: 15px 10px;color: #fff;font-size: 16px;}
 
 body{font-family: 'Roboto', sans-serif;font-size: 18px; line-height: 28px;  color:#333;position: absolute;width: 100%;height: 100%;background: none;}
+
+
+.preloader{position: fixed; width: 100%; height: 100%; top: 0; left: 0; background: rgba(0 ,0 ,0, .5); z-index: 123123;display: none;}
+.pre_cont{text-align: center; font-size: 30px; color: #fff; top: 20%; position: absolute; left: 0; right: 0; margin: 0 auto;}
