--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -307,14 +307,18 @@ table[data-tbl='datatable'] tbody tr.row-pending {
   font-weight: bold;
   margin: 0 0 2rem; }
 
-.modal .policy_status {
+.modal .policy_status, .modal .policy_edit_status {
   font-style: italic; }
 
-.modal .policy_status.approved {
+.modal .policy_status.approved, .modal .policy_edit_status.approved {
   color: #52ca40; }
 
-.modal .policy_status.pending {
+.modal .policy_status.pending, .modal .policy_edit_status.pending {
   color: #d52e2e; }
+
+.modal .policy_edit_type {
+  font-style: italic;
+  color: #368e44; }
 
 .btn-favorate {
   color: #fff !important;
@@ -471,26 +475,6 @@ table[data-tbl='datatable'] tbody tr.row-pending {
 
 .row label {
   margin: 0 0 0 !important; }
-
-.preloader {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.5);
-  z-index: 123123;
-  display: none; }
-
-.pre_cont {
-  text-align: center;
-  font-size: 30px;
-  color: #fff;
-  top: 20%;
-  position: absolute;
-  left: 0;
-  right: 0;
-  margin: 0 auto; }
 
 .colm div {
   font-weight: bold !important; }
