--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -7,3 +7,14 @@ main {position: absolute;height: 100%;width: 100%;}
 .main_login_details form input[type="submit"]:hover {background: #c7c401;color: #000;}
 .main_login_details .login_forgot {color: #fff;font-size: 17px;margin-top: 25px;display: block;}
 .main_login_details .login_forgot:hover {text-decoration: underline;}
+
+#underdiv{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    z-index: 1234;
+    background: red;
+    text-align: center;
+    font-size: 20px;
+    color: #fff;
+}
