--- a/src/scss/employee/_employee.scss
+++ b/src/scss/employee/_employee.scss
@@ -37,7 +37,7 @@ main {padding: 30px 20px;}
 .opt_2 .opt2_heading {text-transform: uppercase;color: #004001;font-size: 16px;margin-bottom: 8px;}
 .opt_2 .form_field_radio {border: 1px solid #004001;display: inline-block;vertical-align: top;position: relative;}
 .opt_2 .form_field_radio input {position: absolute;top: 0;left: 0;width: 100%;height: 100%;opacity: 0;cursor: pointer;margin: 0;z-index: 45;}
-.opt_2 .form_field_radio label {padding: 0 20px 0 48px;display: block;line-height: 42px;color: #004001;font-size: 17px;position: relative;}
+.opt_2 .form_field_radio label {padding: 0 20px 0 48px;display: block;line-height: 42px;color: #004001;font-size: 17px;position: relative;margin-bottom:0;}
 .opt_2 .form_field_radio label:before {content: "";width: 13px;height: 13px;border-radius: 50%;border: 1px solid #004001;position: absolute;top: 50%;transform: translate(0, -50%);left: 20px;}
 
 .opt_2 .form_field_radio input:hover ~ label, .opt_2 .form_field_radio input:checked ~ label  {background: #004001;}
@@ -87,8 +87,12 @@ main {padding: 30px 20px;}
 
 #print_OR{display: none;}
 
-.paid_type_cont{ text-align:left;  padding: 15px 32px; }
+.paid_type_cont{ text-align:left;  padding: 15px 32px; font-size: 17px
+
+}
 .paid_type_cont input[type="text"]{ display: block; font-size: 15px; width: 100%; border: 1px solid #008080; height: 28px; padding-left: 10px;max-width: 291px;}
+
+#paid_type_cash{margin-right: 15px;display: inline-block;}
 
 .check_field{display: none;margin: 5px 0 0;}
 
