--- a/assets/css/employee.css
+++ b/assets/css/employee.css
@@ -387,6 +387,10 @@ nav ul li a {
   font-weight: 300;
   color: #fff;
   margin: 1px 0; }
+  nav ul li a:hover {
+    text-decoration: none;
+    font-weight: bold;
+    color: #fff; }
 
 nav ul li a:hover {
   background: #004001; }
