--- a/src/scss/admin/_overider.scss
+++ b/src/scss/admin/_overider.scss
@@ -69,3 +69,9 @@ table {
         font-size: 1.2em;
     }
 }
+
+#add_emp_admin .form_box label{
+    margin-top: 10px!important;
+}
+
+.alertify .ajs-modal{z-index: 123123123123;}
