--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -349,6 +349,37 @@ table[data-tbl='datatable'] tbody tr.row-pending {
   color: #fff;
   font-size: 17px; }
 
+.my_profile__note {
+  color: red; }
+
+.my_profile__fig {
+  max-width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 2px solid #b5a1a1;
+  background-color: #222; }
+
+.my_profile__uploadcont {
+  max-width: 400px; }
+
+.my_profile__form_cont {
+  display: flex;
+  justify-content: flex-start; }
+  .my_profile__form_cont button {
+    width: 173px;
+    margin-left: 12px; }
+
+.dash_intro figure {
+  display: inline-block;
+  vertical-align: middle;
+  width: 43px;
+  margin-left: 10px;
+  height: 43px;
+  background: #222;
+  border-radius: 50%;
+  overflow: hidden; }
+
 #trans_table {
   margin-top: 20px; }
 
