--- a/src/scss/common/_modal.scss
+++ b/src/scss/common/_modal.scss
@@ -43,3 +43,17 @@
 .modal-body{
     text-align: left;
 }
+
+
+.user_profile_cont{
+    width: 168px;
+    height: 168px;
+    border-radius: 50%;
+    overflow: hidden;
+    border: 2px solid #d7d4d4;
+    text-align: center;
+    margin: 0 auto 20px;
+
+    img{}
+
+}
