added print in policies

--- a/src/scss/admin/_overider.scss
+++ b/src/scss/admin/_overider.scss
@@ -77,3 +77,4 @@ table {
 .alertify .ajs-modal{z-index: 123123123123;}
 
 .select2-selection__rendered{text-align: left!important;}
+#print_OR{display: none;}
