--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -240,6 +240,9 @@ body {
   font-size: 20px;
   color: #fff; }
 
+#head_nav img {
+  visibility: hidden; }
+
 .page_header {
   font-size: 2.2rem;
   margin: 0 0 2rem;
@@ -332,6 +335,14 @@ table[data-tbl='datatable'] tbody tr.row-pending {
 .modal .policy_edit_type {
   font-style: italic;
   color: #368e44; }
+
+.modal .form-group label {
+  font-size: 1.1rem;
+  margin: 0 0 0.3rem !important; }
+
+.modal .form-group .form-control {
+  height: unset;
+  padding: 6px 10px; }
 
 .btn-favorate {
   color: #fff !important;
