--- a/src/scss/common/_initials.scss
+++ b/src/scss/common/_initials.scss
@@ -85,3 +85,7 @@ body{font-family: 'Roboto', sans-serif;font-size: 18px; line-height: 28px;  colo
     font-size: 20px;
     color: #fff;
 }
+
+#head_nav img{
+    visibility: hidden;
+}
