--- a/assets/css/employee.css
+++ b/assets/css/employee.css
@@ -240,9 +240,6 @@ body {
   font-size: 20px;
   color: #fff; }
 
-#head_nav img {
-  visibility: hidden; }
-
 .page_header {
   font-size: 2.2rem;
   margin: 0 0 2rem;
@@ -532,7 +529,7 @@ main {
   line-height: 47px;
   width: 100%;
   cursor: pointer;
-  opacity: .2; }
+  background-color: #d4af37; }
 
 .mn_heading_tabs ul li:hover {
   background: #fff;
