--- a/src/scss/common/_initials.scss
+++ b/src/scss/common/_initials.scss
@@ -86,6 +86,6 @@ body{font-family: 'Roboto', sans-serif;font-size: 18px; line-height: 28px;  colo
     color: #fff;
 }
 
-#head_nav img{
-    visibility: hidden;
-}
+// #head_nav img{
+//     visibility: hidden;
+// }
