--- a/src/scss/common/_datatable.scss
+++ b/src/scss/common/_datatable.scss
@@ -7,10 +7,12 @@ table[data-tbl='datatable']{
         }
     }
     tbody tr.row-pending{
-        background-color: #fcc !important;
+        // background-color: #fcc !important;
+        background-color: #52ca40 !important;
 
         td{
             background-color: #fcc !important;
+            background-color: #52ca40 !important;
         }
     }
 }
