--- a/src/scss/employee/_employee.scss
+++ b/src/scss/employee/_employee.scss
@@ -127,3 +127,38 @@ main {padding: 30px 20px;}
 .flex-left{align-items: flex-start;}
 .flex-right{align-items: flex-end;}
 .flex-right button{font-family: inherit; border: 1px solid #6c0; font-size: 15px; padding: 5px 8px; margin-left: 0.5rem;}
+
+.tbl-rows{
+    .first_td{
+        span{
+            margin-bottom: 14px;
+        }
+    }
+    .td-cont{
+        padding: 36px 0 0;
+        
+        input {
+            display: block;
+            margin-bottom: 5px;
+        }
+    }
+    th{font-weight: bold;}
+    .td-action{
+        width: 0;
+        text-align: center;
+        padding: 43px  0 0;
+        a{font-size: 21px; color: red; margin-bottom: 7px;}
+    }
+    tr{
+        .removeRow{
+            a{
+                font-size: 21px;
+                color: red;
+                display: inline-block;
+                margin-left:5px;
+            }
+        }
+    }
+} 
+
+
