--- a/assets/css/employee.css
+++ b/assets/css/employee.css
@@ -401,6 +401,18 @@ table[data-tbl='datatable'] tbody tr.row-pending {
 .trust_receipt label {
   font-weight: bold; }
 
+#trans_table {
+  margin-top: 20px; }
+
+.dataTable thead {
+  border: 1px solid gray !important; }
+
+.dataTables_length label {
+  text-align: left !important; }
+
+.dataTables_wrapper .dataTables_paginate .paginate_button {
+  padding: 0 !important; }
+
 html {
   font-size: 14px; }
 
