done agents in admin

--- a/src/scss/admin/_admin.scss
+++ b/src/scss/admin/_admin.scss
@@ -1,9 +1,8 @@
 // #main {padding: 25px;}
-
 .addEmployee {text-align: right;}
 .addemp_button {text-align: right; font-size: 16px; display: inline-block; color: #fff; cursor: pointer; font-weight: 600; padding: 5px 12px; background: #008001; border-radius: 5px;}
-.pop_app_add_Emp {position: absolute;top: 0;left: 0;width: 100%;height: 100%;background: rgba(0,0,0,0.85);visibility: hidden;opacity: -1;text-align: left; transition: all .8s ease;z-index: 1000;}
-.pop_up_inner {width: 700px;background: #fff;position: absolute;top: 50%;left: 50%;transform: translate(-50%, -50%);padding: 20px;}
+.pop_app_add_Emp {position: fixed;top: 0;left: 0;width: 100%;height: 100%;background: rgba(0,0,0,0.85);visibility: hidden;opacity: -1;text-align: left; transition: all .8s ease;z-index: 1000;overflow-y: auto;}
+.pop_up_inner { width: 700px; background: #fff; position: relative; padding: 20px; margin: 50px auto; }
 #add_emp_admin {width: 100%;display: block;}
 .addhead_emp {color: #008001;font-size: 21px;font-weight: 600;margin-bottom: 25px;border-bottom: 1px solid #808080;padding-bottom: 15px;}
 #add_emp_admin .form_box {display: block;margin: 0 0 0 5px;}
