--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -438,7 +438,7 @@ table[data-tbl='datatable'] tbody tr.row-pending {
   border-radius: 5px; }
 
 .pop_app_add_Emp {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -448,16 +448,15 @@ table[data-tbl='datatable'] tbody tr.row-pending {
   opacity: -1;
   text-align: left;
   transition: all .8s ease;
-  z-index: 1000; }
+  z-index: 1000;
+  overflow-y: auto; }
 
 .pop_up_inner {
   width: 700px;
   background: #fff;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 20px; }
+  position: relative;
+  padding: 20px;
+  margin: 50px auto; }
 
 #add_emp_admin {
   width: 100%;
