--- a/src/scss/common/_header.scss
+++ b/src/scss/common/_header.scss
@@ -11,6 +11,7 @@
     font-size: 1.1rem;
     color: #fff;
     margin: 2rem 0 0 ;
+    height: 100%;
     label{
         margin: 0;
         display: block;
