--- a/assets/css/employee.css
+++ b/assets/css/employee.css
@@ -732,6 +732,26 @@ main {
   width: 85% !important;
 }
 
+.entryBtnDiv{
+  display: flex;
+  justify-content: center;
+  gap:2 
+}
+
+.entryBtn{
+  border: 1px solid gray;
+  padding: .6rem;
+  background: green;
+  color: #fff;
+  font-size: 17px;
+  font-family: inherit;
+  margin: 0 10px 0;
+  transition: all ease-in-out;
+}
+.entryBtn:hover{
+  opacity: .6;
+}
+
 .opacity_formed {
   opacity: 0;
   position: absolute;
